@@ -1,3 +1,8 @@
+2003-04-24  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* doc/tcpip.sgml: Fix some docbook errors only reported by certain
+	Jade versions.
+
 2003-04-12  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/network_support.c (init_loopback_interface): Close the
